kubernetes/gcp/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: shieldrule-docs
  name: shieldrule-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shieldrule-docs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: shieldrule-docs
    spec:
      containers:
        - image: us-west1-docker.pkg.dev/shieldrule-dev-project/shieldrule-dev-docs/docs:dev
          name: shieldrule-docs
          ports:
            - containerPort: 8000
          resources: {}
          securityContext:
            capabilities:
              drop:
                - all
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: shieldrule-docs-tmpfs0
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: shieldrule-docs-tmpfs0
status: {}
