kubernetes/gcp/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: shieldrule-docs
  name: shieldrule-docs
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  type: NodePort
  selector:
    io.kompose.service: shieldrule-docs
status:
  loadBalancer: {}
